# focus

./: AGENTS.md  CLAUDE.md  commitlint.config.js  index.html  package.json  pnpm-lock.yaml
.claude/: settings.local.json
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  commands.rs  core.rs  extension.rs  lib.rs  main.rs  plugins.rs  utils.rs
src-tauri/src/api/: action_runner.rs  command_tree.rs  config_helper.rs  extension.rs  types.rs
src-tauri/src/core/: action_runner.rs  config_helper.rs  plugin_manager.rs  shortcut.rs
src-tauri/src/extension/: app_plugin.rs  cal_plugin.rs  demo_plugin.rs  file_plugin.rs  launcher_plugin.rs
src-tauri/src/plugins/: app_plugin.rs  cal_plugin.rs  demo_plugin.rs  file_plugin.rs  launcher_plugin.rs
src/api/: index.ts  spotlight.ts  startup.ts  window.ts
src/components/: ActionsBox.vue  QueryBox.vue  ResultItem.vue  SpotlightWindow.vue  TipsBar.vue
src/composables/: useTheme.ts
src/pages/: HomePage.vue  QueryPage.vue  SettingPage.vue  StartupPage.vue
