[package]
name = "focus"
version = "0.1.0"
description = "A Tauri App"
authors = ["Cute-angel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "focus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


thiserror = "2.0.17"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
everything-sdk = { version = "0.0.6", features = ["async"] }
tauri-plugin-process = "2"
futures = "0.3.31"

windows = { version = "0.62.2", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Iis", "Win32_System", "Win32_Storage_FileSystem", "Win32_Graphics", "Win32_Graphics_Gdi" ,"Win32_Graphics_GdiPlus"] }

image = "0.25.8"
exr = "1.74.0"
base64 = "0.22.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
